--- a/roles/kavita/tasks/main.yml
+++ b/roles/kavita/tasks/main.yml
@@ -15,7 +15,7 @@
         image: "{{ kavita_image_name }}:{{ kavita_image_version }}"
         pull: true
         volumes:
-          - "{{ kavita_data_directory }}/config:/config:rw"
+          - "{{ kavita_data_directory }}/config:/kavita/config:rw"
           - "{{ kavita_comics_directory }}:/comics:ro"
         ports:
           - "{{ kavita_port }}:5000"
